--- a/evcar.css
+++ b/evcar.css
@@ -1,9 +1,12 @@
 * {
     box-sizing: border-box;
+    
   }
  body {
     margin: 0;
     padding: 0;
+    background-color: #F4F5FF;
+  
    }
  .row{
    height:500px;
@@ -11,20 +14,54 @@
   .column {
     float: left;
     width: 50%;
-    padding: 10px;
+    padding: 40px;
     height: 580px; 
     font-size: 30px;
-    
-        background-image: url('images/4.png');
-        background-repeat: no-repeat;
-        background-size: 770px,400px;
-        background-position:center;
-    
-        
+    background-color: #F4F5FF;
+          
      
   }
+  .tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    left: 110%;
+    font-size:15px ;
+  }
+  
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent black transparent transparent;
+  }
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
+a{
+ text-decoration:none;
+ color: rgb(82, 80, 80);
+ font-size:30px;
+}
  input{
    width:200px;
+   font-size: 20px;
  }
   .column1{
     float: left;
@@ -32,15 +69,37 @@
     padding: 10px;
     height: 580px; 
     font-size: 30px;
+    background-color: #F4F5FF;
     
-        background-image: url('images/5.png');
+      /*  background-image: url('images/7.png');
+
         background-repeat: no-repeat;
-        background-size: 770px,300px;
+        background-size: 500px,300px;
         background-position:center;
-    
+        position: relative;
+        animation-name: example;
+        animation-duration:2s;
+        animation-iteration-count: 25;*/
+      }
+    .column1 img{
+      height:500px;
+      width:80%;
+      align-content: center;
+      position: relative;
+      animation-name: example;
+        animation-duration:2s;
+        animation-iteration-count: 25;
+    }
+      @keyframes example {
+        0%   { left:0px; top:0px;}
+      
+        50%  { left:50px; top:50px;}
+        
+        100% { left:0px; top:0px;}
+      }
 
      
-  }
+  
  
   .row:after {
     content: "";
@@ -57,7 +116,7 @@
   
    .main {
     max-height: 250px;;
-    background-color: #014d4e;
+    background-color: #3F3D56;
     color: white;
     font-size: 38pt;
     text-align: center;
@@ -68,7 +127,7 @@
     bottom: 0;
    }
    .footer-distributed{
-    background-color: #014d4e;
+    background-color: #3F3D56;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     width: 100%;
@@ -87,7 +146,7 @@
    }
     
    .footer-distributed .footer-left{
-    width: 40%;
+    width: 50%;
    }
     
    .footer-distributed h3{
@@ -122,11 +181,8 @@
    }
     
     
-   .footer-distributed .footer-center{
-    width: 35%;
-   }
-    
-   .footer-distributed .footer-center i{
+   
+ /*  .footer-distributed .footer-center i{
     background-color:  #008080;
     color: #ffffff;
     font-size: 25px;
@@ -162,29 +218,32 @@
     color:  #5383d3;
     text-decoration: none;;
    }
-    
+    */
    .footer-distributed .footer-right{
-    width: 20%;
+    width: 40%;
    }
     
    .footer-distributed .footer-company-about{
     line-height: 20px;
     color:  #92999f;
-    font-size: 13px;
+    font-size: 18px;
     font-weight: normal;
-    margin: 0;
+   
+    margin-left:20px;
    }
     
    .footer-distributed .footer-company-about span{
     display: block;
     color:  #ffffff;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: bold;
     margin-bottom: 20px;
+   
    }
     
    .footer-distributed .footer-icons{
     margin-top: 25px;
+    margin-left:20px
    }
     
    .footer-distributed .footer-icons a{
